# format_archive

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
core/src/: lib.rs
examples/: control_flow.rs  nested_debug_help_struct.rs
macro/: Cargo.toml  README.md
macro/src/: lazy_format.rs  lib.rs
src/: ext.rs  lib.rs
tests/: with_macro.rs  without_macro.rs
