[package]
name = "format"
version = "0.2.1"
authors = ["kgv <kgv@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "A utility crate to make it easier to work with the formatter"
homepage = "https://crates.io/crates/format"
documentation = "https://docs.rs/format"
repository = "https://github.com/kgv/format"
readme = "README.md"
keywords = ["format", "help", "lazy", "macro", "wrap"]
categories = ["no-std", "rust-patterns", "value-formatting"]
edition = "2018"

[dependencies]
format-core = { path = "core", version = "0.2.1" }
format-macro = { path = "macro", version = "0.2.1", optional = true }
proc-macro-hack = { version = "0.5", optional = true }

[features]
default = ["macro", "format-macro", "proc-macro-hack"]
macro = []
nightly = ["macro", "format-macro/nightly", "unstable"]
unstable = []