[package]
name = "format"
version = "0.2.3"
authors = ["kgv <kgv@users.noreply.github.com>"]
edition = "2018"
description = "A utility crate to make it easier to work with the formatter"
documentation = "https://docs.rs/format"
readme = "README.md"
homepage = "https://crates.io/crates/format"
repository = "https://github.com/kgv/format"
license = "MIT OR Apache-2.0"
keywords = ["format", "help", "lazy", "macro", "wrap"]
categories = ["no-std", "rust-patterns", "value-formatting"]

[dependencies]
format-core = "0.2.3"
format-macro = { version = "0.2.3", optional = true }

[features]
default = ["macro"]
macro = ["format-macro"]