[package]
name = "format-core"
version = "0.2.4"
authors = ["kgv <kgv@users.noreply.github.com>"]
edition = "2018"
description = "Core format types"
documentation = "https://docs.rs/format-core"
readme = "README.md"
homepage = "https://crates.io/crates/format-core"
repository = "https://github.com/kgv/format"
license = "MIT OR Apache-2.0"
keywords = ["format", "help", "lazy", "wrap"]
categories = ["no-std", "rust-patterns", "value-formatting"]
