[package]
name = "format-macro"
version = "0.2.2"
authors = ["kgv <kgv@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "Format procedural macro"
homepage = "https://crates.io/crates/format-macro"
documentation = "https://docs.rs/format-macro"
repository = "https://github.com/kgv/format"
readme = "README.md"
keywords = ["format", "help", "lazy", "macro", "wrap"]
categories = ["no-std", "rust-patterns", "value-formatting"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5.15"
proc-macro2 = "1.0.10"
quote = "1.0.3"
syn = { version = "1.0.17", features = ["full"] }

[dev-dependencies]
format-core = "0.2.2"

[features]
default = []
nightly = ["unstable"]
unstable = []