[package]
name = "format-macro"
version = "0.2.4"
authors = ["kgv <kgv@users.noreply.github.com>"]
edition = "2018"
description = "Format procedural macro"
documentation = "https://docs.rs/format-macro"
readme = "README.md"
homepage = "https://crates.io/crates/format-macro"
repository = "https://github.com/kgv/format"
license = "MIT OR Apache-2.0"
keywords = ["format", "help", "lazy", "macro", "wrap"]
categories = ["no-std", "rust-patterns", "value-formatting"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = { version = "1.0.68", features = ["full"] }

[dev-dependencies]
format-core = { version = "0.2.4", path = "../core" }
